<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/traceope_orange"
    android:label="@string/title_activity_slide"
    tools:context="com.traceope.app.slider.SlideFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_gravity="center"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/reader_2"
            android:layout_gravity="center" />

        <TextView
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="true"
            android:lineSpacingMultiplier="1.2"
            android:padding="16dp"
            android:text="@string/fragment_05_text"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/reader_3"
            android:adjustViewBounds="false"
            android:layout_gravity="center" />

        <TextView
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="true"
            android:lineSpacingMultiplier="1.2"
            android:padding="16dp"
            android:text="@string/fragment_06_text"
            android:id="@+id/textView2"
            android:layout_gravity="center" />
    </LinearLayout>

</FrameLayout>