<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/button_callcamera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/traceope_orange"
        android:text="@string/get_photo" />

    <ScrollView
        android:id="@+id/verticalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_callcamera"
        android:layout_centerHorizontal="true">

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button_callcamera">


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_margin="10dp">


                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|top"
                    android:contentDescription="image taken from camera"
                    android:src="@drawable/ic_photo" />

                <ImageView

                    android:id="@+id/photo_image"
                    android:layout_width="450dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:background="@color/grey"
                    android:contentDescription="image taken from camera" />
            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1">


                <EditText
                    android:id="@+id/editText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@color/grey"
                    android:gravity="center"
                    android:hint="@string/get_txt_photo"
                    android:maxLines="20"
                    android:minHeight="150dp"
                    android:minWidth="500dp" />

            </TableRow>

            <ImageView
                android:id="@+id/diapo_refresh"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_column="0"
                android:layout_gravity="center|left|top"
                android:layout_marginLeft="10dp"
                android:layout_row="2"
                android:contentDescription="image taken from camera"
                android:src="@drawable/folder" />


            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3">

                <TableRow
                    android:id="@+id/diapo"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:layout_column="0"
                    android:layout_row="3">

                </TableRow>
            </HorizontalScrollView>

        </GridLayout>
    </ScrollView>


    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:background="@color/traceope_orange"
        android:text="@string/photo_send_mail" />


</RelativeLayout>


